# OpenGLAppExample

./: .gitmodules  CMakeLists.txt  README.md  Sample.md
OpenGLApp/: CMakeLists.txt
OpenGLApp/res/shaders/: Test2DBatchRendering.shader  basic.shader  basicBlueTri.shader  basicRedTri.shader  basicTexture.shader
OpenGLApp/src/: IndexBuffer.cpp  IndexBuffer.hpp  OpenGLApp.cpp  OpenGLApp.hpp  OpenGLDebug.cpp  OpenGLDebug.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  Quad.cpp  Quad.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
OpenGLApp/tests/: Test.cpp  Test.hpp  Test2DBatchRendering.cpp  Test2DBatchRendering.hpp  TestClearColor.cpp  TestClearColor.hpp  TestTexture2D.cpp  TestTexture2D.hpp  TestViewImage.cpp  TestViewImage.hpp
